# Tender_backend-rust

./: .env  .gitignore  Cargo.toml  diesel.toml  readme.md
migrations/2024-08-05-175642_users/: down.sql  up.sql
src/: main.rs  open_api.rs  schema.rs  server.rs
src/api/: mod.rs
src/api/v1/: mod.rs
src/api/v1/users/: mod.rs  routes.rs
src/api/v1/users/forms/: mod.rs
src/api/v1/users/models/: mod.rs
src/api/v1/users/response/: mod.rs
src/utils/: error.rs  mod.rs
